Something about smoothing and that

--- a/Anomaly_detection_coursework_starter.ipynb
+++ b/Anomaly_detection_coursework_starter.ipynb
@@ -650,15 +650,12 @@
     "def create_knn_model(neighbors, percentile):\n",
     "    # Create our classifier, number of neighbors checked can be adjusted\n",
     "    knn = NearestNeighbors(n_neighbors=neighbors)\n",
-    "    # This is how we will filter our final outliers based on their distance from neighbours\n",
-    "    # If the value is within the x% of other values it will not be classified as an outlier\n",
-    "    # We will adjust this to meet the number of our predicted outliers which is about 6.24% of our data being outliers or 1288 outliers\n",
     "    knn.fit(houses_robust_scaled)\n",
     "    distances, _= knn.kneighbors(houses_robust_scaled)\n",
     "    outlier_scores = np.max(distances, axis=1)\n",
-    "    threshold = np.percentile(outlier_scores, percentile)\n",
-    "    main_outliers_knn = np.where(outlier_scores > threshold)[0]\n",
-    "    return main_outliers_knn\n"
+    "    percentile_threshold = np.percentile(outlier_scores, percentile)\n",
+    "    outliers = np.where(outlier_scores > percentile_threshold)[0]\n",
+    "    return outliers\n"
    ],
    "metadata": {
     "collapsed": false
@@ -793,8 +790,9 @@
    ],
    "source": [
     "# Test for best n_neighbors value for matching our predicted set\n",
-    "# Warning this takes a while to run, the cell below displays the parameters I decided to use\n",
+    "# Warning this takes a while to run\n",
     "for i in range(1,100):\n",
+    "    # 93.76 is used as it gives us 1288 values which matches the number of values predicted above\n",
     "    main_outliers_knn = create_knn_model(i,93.76)\n",
     "    compare_results(main_outliers_knn, main_outliers, i)"
    ],
@@ -805,9 +803,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Typically, I would use values between 15 and 30, with a dataframe with 20000 elements I wanted to see if a larger sample would affect how the prediction matched my STD based outliers which\n",
-    "un surprisingly as you increase the number of neighbors compared.If anything this loop simply displays the way that the smoothing affect moves knn away from local variation and more towards\n",
-    "matching the global view of the data."
+    "Typically, I would use values between 15 and 30, with a dataframe with 20000 elements I wanted to see if a larger\n",
+    "sample would affect how the prediction matched my STD based outliers. Un-surprisingly as you increase the\n",
+    "number of neighbors compared the more the knn model matches my initial prediction.\n",
+    "\n",
+    "If anything this loop simply displays the way that the smoothing affect moves knn away from local variation and\n",
+    "more towards matching the global variation of the data.\n",
+    "\n",
+    "However, it is suggested that using a higher amount of neighbors reduces the amount of overfitting within the model\n",
+    "because of the fact it isn't as susceptible to local trends within the dataset"
    ],
    "metadata": {
     "collapsed": false
